<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    android:background="@drawable/mygradient"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:background="@drawable/mygradient"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="83dp"
            android:layout_height="85dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/gendertext"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametext"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/agetext"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametext"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/gendertext"
            android:text="@string/age"
            android:textColor="#000"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/addresstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/agetext"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/address"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/contacttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addresstext"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/contact"
            android:textColor="#000"
            android:textSize="15sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>